Issue 39 Make sure video iframe do not overflow container
Vimeo, Youtube and so on inserts iframes that we need to control. This
also make sure file elements like video, image and so on is separated
with withe space since they are multi value fields.

--- a/scss/media-text.scss
+++ b/scss/media-text.scss
@@ -11,3 +11,16 @@
     padding-right: 1em;
   }
 }
+
+.node.view-mode-full img,
+.file-video iframe {
+  width: 100%;
+}
+
+.node.view-mode-full {
+  .field-type-text-long .field-item,
+  .field-type-file .field-item,
+  .field-type-image .field-item {
+    margin: 1em 0;
+  }
+}
